Signed-off-by: ClassLei <luke123@foxmail.com> 设置流程变量
Signed-off-by: ClassLei <luke123@foxmail.com>

--- a/java/activiti/8.流程任务的执行.md
+++ b/java/activiti/8.流程任务的执行.md
@@ -1,3 +1,47 @@
+# 0.总结
+
+## 1.Execution 执行对象
+
+按流程定义的规则执行一次的过程
+
+对应的表:
+
+* `act_ru_execution` , 正在执行的信息
+* `act_hi_procinst` , 已经执行完成的历史流程实例信息
+* `act_hi_actinst` , 存放历史所有完成的活动
+
+## 2.ProcessInstance 流程实例
+
+特指流程开始到结束的那个最大的执行分支,一个执行的流程中,流程实例只有一个.
+
+注意:
+
+* 如果是单例流程 , 执行对象id就是流程实例id
+* 如果一个流程有分支和聚合 , 那么执行对象id和流程实例id就不同
+* 一个流程中只有一个流程实例 , 执行对象会有多个
+
+## 3.Task 任务
+
+执行到某个任务环节时生成的人物信息
+
+对应的表:
+
+* `act_run_task` , 正在执行的任务信息
+* `act_hi_taskinst` , 已经完成的历史任务信息
+
+## 4. 相关ID总结
+
+* 部署id
+  * `act_re_deployment` - `id`
+* 流程定义id
+  * `act_re_procdef` - `id`
+* 流程实例id
+  * `act_ru_execution` - `id`
+* 执行实例id
+  * `act_ru_task` - `execution_id`
+* 任务id
+  * `act_ru_task` - `id`
+
 # 1.启动流程实例
 
 - `processDefinitionId` 流程定义ID
@@ -170,7 +214,41 @@ public void completeTask() {
 
 
 
-# 5. 查询历史任务
+# 5.查询历史任务
 
-# 6. 查询历史流程实例
+```java
+	/**
+	 * 查询历史任务
+	 */
+	@Test
+	public void queryHistoryTask() {
+		HistoryService historyService = this.processEngine.getHistoryService();
+		List<HistoricTaskInstance> list = historyService.createHistoricTaskInstanceQuery().list();
+		if (list!=null&&list.size()>0) {
+			for (HistoricTaskInstance hi : list) {
+				System.out.println("任务id="+hi.getId());
+			}
+		}
+	}
+```
+
+
+
+# 6.查询历史流程实例
+
+```java
+	/**
+	 * 查询历史流程实例
+	 */
+	@Test
+	public void queryHistoryProcess() {
+		HistoryService historyService = this.processEngine.getHistoryService();
+		List<HistoricProcessInstance> list = historyService.createHistoricProcessInstanceQuery().list();
+		if (list != null && list.size() > 0) {
+			for (HistoricProcessInstance hi : list) {
+				System.out.println("任务id=" + hi.getId());
+			}
+		}
+	}
+```
 
