--- a/java/activiti/9.流程变量.md
+++ b/java/activiti/9.流程变量.md
@@ -1,13 +1,20 @@
-* 流程变量在整个工作流中扮演很重要的作用 .
 
-* 流程变流的作用域范围是只对应一个流程实例 . 也就是说各个流程实力之间的流程变量是互不影响的 . 流程实例结束完成后流程变量还保存在数据库中(存放在历史表中) .
 
-* 设置流程变量的值
-  * 存在形式  key_value
+# 1.流程变量
 
-# 0.总结
-
-# 1.流程图
+1. 流程变量在整个工作流中扮演很重要的作用 .
+2. 流程变流的作用域范围是只对应一个流程实例 . 也就是说各个流程实力之间的流程变量是互不影响的 . 流程实例结束完成后流程变量还保存在数据库中(存放在历史表中) .
+3. 设置流程变量的值
+   * 存在形式  key_value
+4. 对应的表
+   * `act_ru_variable` 正在执行的流程变量表
+   * `act_hi_vannst` 流程变量历史表
+5. 扩展知识 : `setVariable`和`setVariableLocal`的区别
+   * `setVariable` : 设置流程变量的时候,流程变量名称相同的时候,后一次的值替换前一次的值,而且可以看到`Task_id`的字段不会存放任何值
+   * `setVariableLocal`
+     * 设置流程变量的时候,针对当前活动的节点设置流程变量,如果一个流程变量存在两个活动节点,对每个活动节点都设置流程变量,就是流程变量的名称相同,后一次的版本值也不会覆盖前一次的值,他会使用不同的任务id作为标识,存放两个流程变量,而且可以看到`Task_id`字段会存放任务id的值.
+     * 使用`setVariableLocal`说明流程变量绑定了当前的任务,当流程继续执行时,下一个任务获取不到这个流程变量(因为正在执行的流程变量中没有这个数据),所有查询正在执行的任务时不能查询到我们需要的数据,此时需要查询历史流程变量.
+6. 流程变量可以通过EL表达式的方式,决定流程的走向
 
 # 2.部署流程定义
 
@@ -104,7 +111,59 @@ public class User implements Serializable{
 
 # 5.获取流程变量
 
+* 如果存入和取出的Object发生了改变,会抛出异常
+
+```java
+	/**
+	 * 获取流程变量
+	 */
+	@Test
+	public void getVariables() {
+		RuntimeService runtimeService = this.processEngine.getRuntimeService();
+		String executionId = "2501";
+		Object variable1 = runtimeService.getVariable(executionId, "用户");
+		Object variable2 = runtimeService.getVariable(executionId, "请假人");
+		System.out.println(variable1);
+		System.out.println(variable2);
+	}
+```
+
+
+
 # 6.查询历史流程变量
 
+```java
+	/**
+	 * 查询历史流程变量
+	 */
+	@Test
+	public void getHistoryVariables() {
+		HistoryService historyService = this.processEngine.getHistoryService();
+		// 指定变量id获取唯一的
+		HistoricVariableInstance singleResult = historyService.createHistoricVariableInstanceQuery().id("2503")
+				.singleResult();
+
+		System.out.println(singleResult);
+		// 指定流程实例id获取所有的
+		List<HistoricVariableInstance> list = historyService.createHistoricVariableInstanceQuery()
+				.processInstanceId("2501").list();
+		for (HistoricVariableInstance historicVariableInstance : list) {
+			System.out.println(historicVariableInstance);
+		}
+	}
+```
+
+
+
 # 7.支持的流程变量类型
+
+* string
+* integer
+* short
+* long
+* double
+* boolean
+* date
+* binary
+* serializable
 
